@@ -3,6 +3,8 @@ package package_tests
 import (
 	"testing"
 
+	"github.com/fatih/set"
+
 	er "github.com/elastic/apm-server/processor/error"
 	"github.com/elastic/apm-server/tests"
 )
@@ -13,5 +15,12 @@ func TestFields(t *testing.T) {
 		"./../_meta/fields.yml",
 	}
 	tests.TestEventAttrsDocumentedInFields(t, fieldsPaths, er.NewProcessor)
-	tests.TestDocumentedFieldsInEvent(t, fieldsPaths, er.NewProcessor)
+
+	notInEvent := set.New(
+		"context.db.instance",
+		"context.db.statement",
+		"context.db.user",
+		"context.db.type",
+		"context.db")
+	tests.TestDocumentedFieldsInEvent(t, fieldsPaths, er.NewProcessor, notInEvent)
 }
